2015-12-09  Holger Schulz  <holger.schulz@cern.ch>

	* Can specify PREFIX when calling make


2015-12-07  Holger Schulz  <holger.schulz@cern.ch>

	* Use __all__ in __init__.py 

	* Started sphinx documentation
	
	* Support only iminuit, bump version to 2.2.alpha, restructure imports

	* Sanity checks when calling parametrisation


2015-12-03  Holger Schulz  <holger.schulz@cern.ch>

	* Make derivative calculation work also when scaling params
	
	* Let YODA write YODA


2015-12-02  Holger Schulz  <holger.schulz@cern.ch>

	* Derivative calculation


2015-11-28  Andy Buckley  <andy.buckley@cern.ch>

	* Version 2.1.2

	* Revert range shift in Ipol.cc, since it produced (small)
	numerical errors rather than improved stability. To be
	understood...

	* Add test/mkpolydata script, for generating polynomial pseudodata
	used in closure tests.

2015-11-27  Andy Buckley  <andy.buckley@cern.ch>

	* Fix bug in histo loading.

	* Adding log binning and other options to prof2-residuals.

2015-11-24  Andy Buckley  <andy.buckley@cern.ch>

	* Version 2.1.1 release.

	* Fix prof2-predict YODA writing, and improve DataHisto.toYODA.

	* Change parameter rescaling from using the [0,1] range to instead
	use [1,2], to avoid arbitrarily scaled param numbers. BREAKS IPOL
	FILE COMPATIBILITY WITH 2.1.0!!

	* Set minimizer initial step size = prange/10.

	* Add automatic determination of maximum MC errors in prof-tune,
	and use them to regularize interpolated errs which could distort
	the fit.

	* Separate internal Minuit function names (with syntax
	restrictions) from the free-form external param names.

2015-11-23  Andy Buckley  <andy.buckley@cern.ch>

	* Add pyext/professor2/chi2.py

	* Add find_maxerrs() to the Python interface, for use in error regularisation.

	* Use the param file name as a regex.

	* Use __slots__ in the internal histogram and bin types, for better memory efficiency.

	* Fix (re-fix?) use of inappropriate indices in calculation of mean and median MC uncertainties.
