@@ -49,9 +49,8 @@ if len(args) >= 2:
 
 ## Load the Professor machinery
 import professor2 as prof
-from professor2 import ui
 if not opts.QUIET:
-    print(prof.ui.logo)
+    print(prof.logo)
 
 ## No point in going further if YODA isn't available, too
 try:
@@ -66,14 +65,14 @@ import glob
 # TODO: add runcomb file parsing to select a runs subset
 INDIRS = glob.glob(os.path.join(RUNSDIR,"*"))
 try:
-    PARAMS, HISTOS = prof.ui.read_rundata(INDIRS, opts.PNAME)
-    RUNS, PARAMNAMES, PARAMSLIST = prof.ui.mk_ipolinputs(PARAMS)
+    PARAMS, HISTOS = prof.read_rundata(INDIRS, opts.PNAME)
+    RUNS, PARAMNAMES, PARAMSLIST = prof.mk_ipolinputs(PARAMS)
 except Exception, e:
     print(e, file=sys.stderr)
     sys.exit(1)
 
 ## Load interpolated histograms from file
-IMETA, IHISTOS = prof.ui.read_ipolhistos(IFILE)
+IMETA, IHISTOS = prof.read_ipolhistos(IFILE)
 print("Loaded ipol histos from", IFILE)
 
 
