@@ -20,10 +20,9 @@ for i in xrange(M_X.shape[0]):
         dY.append(fprime(i,j))
 
 import professor2 as prof
-from professor2 import ui
 import sys
 order = int(sys.argv[1]) if len(sys.argv) > 1 else 3
-ipol = prof.ui.Ipol(P, Y, order)
+ipol = prof.Ipol(P, Y, order)
 
 for i in xrange(M_X.shape[0]):
     for j in xrange(M_X.shape[1]):
